fix: modal img's, nav menu on tablet, scrollable icon and team tag on mobile

--- a/src/components/Gallery/gallery.css
+++ b/src/components/Gallery/gallery.css
@@ -9,32 +9,24 @@
   
   .modal {
     display: none;
-    /* Hidden by default */
     position: fixed;
-    /* Stay in place */
     z-index: 6;
-    /* Sit on top */
     padding-top: 100px;
     /* Location of the box */
     left: 0;
     top: 0;
     width: 100%;
-    /* Full width */
     height: 100%;
-    /* Full height */
     overflow: auto;
     /* Enable scroll if needed */
     background-color: rgb(0, 0, 0);
-    /* Fallback color */
     background-color: rgba(0, 0, 0, 0.9);
-    /* Black w/ opacity */
   }
   
   .modal-content {
     margin: auto;
-    padding-top: 2%;
-    display: block;
-    width: 100%;
+    margin-top: 5%;
+    /* display: block; */
     max-width: 50%;
     /* border-radius: 20px; */
   }
@@ -82,9 +74,10 @@
     cursor: pointer;
   }
   
-  @media only screen and (max-width: 700px) {
+  @media only screen and (max-width: 1024px) {
     .modal-content {
-      width: 95%;
+      max-width: 90%;
+      height: auto;
       margin-top: 20%;
     }
   }
